--- a/Task1-DoubanMovieSpider.ipynb
+++ b/Task1-DoubanMovieSpider.ipynb
@@ -18,9 +18,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<span class=\"inq\">希望让人自由。</span>]\n",
+      "[<span class=\"inq\">风华绝代。</span>]\n",
+      "[<span class=\"inq\">一部美国近现代史。</span>]\n",
+      "[<span class=\"inq\">怪蜀黍和小萝莉不得不说的故事。</span>]\n",
+      "[<span class=\"inq\">最美的谎言。</span>]\n",
+      "[<span class=\"inq\">失去的才是永恒的。 </span>]\n",
+      "[<span class=\"inq\">最好的宫崎骏，最好的久石让。 </span>]\n",
+      "[<span class=\"inq\">拯救一个人，就是拯救整个世界。</span>]\n",
+      "[<span class=\"inq\">诺兰给了我们一场无法盗取的梦。</span>]\n",
+      "[<span class=\"inq\">永远都不能忘记你所爱的人。</span>]\n",
+      "[<span class=\"inq\">每个人都要走一条自己坚定了的路，就算是粉身碎骨。 </span>]\n",
+      "[<span class=\"inq\">如果再也不能见到你，祝你早安，午安，晚安。</span>]\n",
+      "[<span class=\"inq\">英俊版憨豆，高情商版谢耳朵。</span>]\n",
+      "[<span class=\"inq\">小瓦力，大人生。</span>]\n",
+      "[<span class=\"inq\">天籁一般的童声，是最接近上帝的存在。 </span>]\n",
+      "[<span class=\"inq\">爱是一种力量，让我们超越时空感知它的存在。</span>]\n",
+      "[<span class=\"inq\">一生所爱。</span>]\n",
+      "[<span class=\"inq\">我们一路奋战不是为了改变世界，而是为了不让世界改变我们。</span>]\n",
+      "[<span class=\"inq\">迪士尼给我们营造的乌托邦就是这样，永远善良勇敢，永远出乎意料。</span>]\n",
+      "[<span class=\"inq\">香港电影史上永不过时的杰作。</span>]\n",
+      "[<span class=\"inq\">人人心中都有个龙猫，童年就永远不会消失。</span>]\n",
+      "[<span class=\"inq\">千万不要记恨你的对手，这样会让你失去理智。</span>]\n",
+      "[<span class=\"inq\">平民励志片。 </span>]\n",
+      "[<span class=\"inq\">真正的幸福是来自内心深处。</span>]\n",
+      "[<span class=\"inq\">满满温情的高雅喜剧。</span>]\n",
+      "[<span class=\"inq\">无尽的黑暗。</span>]\n",
+      "[<span class=\"inq\">比利·怀德满分作品。</span>]\n",
+      "[<span class=\"inq\">张艺谋最好的电影。</span>]\n",
+      "[<span class=\"inq\">Tomorrow is another day.</span>]\n",
+      "[<span class=\"inq\">死亡不是真的逝去，遗忘才是永恒的消亡。</span>]\n",
+      "[<span class=\"inq\">“不要跟我比惨，我比你更惨”再适合这部电影不过了。</span>]\n",
+      "[<span class=\"inq\">你不是在为你一个人战斗，你要让千千万万的女性看到女生并不是只能相夫教子。</span>]\n",
+      "[<span class=\"inq\">史诗的终章。</span>]\n",
+      "[<span class=\"inq\">瑰丽壮观、无人能及的冒险之旅。</span>]\n",
+      "[<span class=\"inq\">凝视卑弱生命，用电影改变命运。</span>]\n",
+      "[<span class=\"inq\">最后那些最无聊的事情，才是最值得怀念的。 </span>]\n",
+      "[<span class=\"inq\">1957年的理想主义。 </span>]\n",
+      "[<span class=\"inq\">对敌人的仁慈，就是对自己残忍。</span>]\n",
+      "[<span class=\"inq\">对天空的追逐，永不停止。 </span>]\n",
+      "[<span class=\"inq\">旷古烁今。</span>]\n",
+      "[<span class=\"inq\">带着心爱的人在天空飞翔。</span>]\n",
+      "[<span class=\"inq\">受过伤害的人总是笑得最开心，因为他们不愿意让身边的人承受一样的痛苦。</span>]\n",
+      "[<span class=\"inq\">那些吻戏，那些青春，都在影院的黑暗里被泪水冲刷得无比清晰。</span>]\n",
+      "[<span class=\"inq\">爱情哪怕只有一天。</span>]\n",
+      "[<span class=\"inq\">史上最美的探戈。</span>]\n",
+      "[<span class=\"inq\">电影的现实意义大过电影本身。</span>]\n",
+      "[<span class=\"inq\">童话世界的开端。</span>]\n",
+      "[<span class=\"inq\">邪恶与平庸蛰伏于同一个母体，在特定的时间互相对峙。</span>]\n",
+      "[<span class=\"inq\">对我们国家而言，这样的电影多一部是一部。</span>]\n",
+      "[<span class=\"inq\">当一个死水般的体制内出现一个活跃的变数时，所有的腐臭都站在了光明的对面。</span>]\n",
+      "[<span class=\"inq\">优雅的孤独。</span>]\n",
+      "[<span class=\"inq\">承前启后的史诗篇章。</span>]\n",
+      "[<span class=\"inq\">动物版《哈姆雷特》。</span>]\n",
+      "[<span class=\"inq\">别样人生。</span>]\n",
+      "[<span class=\"inq\">经典之作，历久弥新。</span>]\n",
+      "[<span class=\"inq\">传说的开始。</span>]\n",
+      "[<span class=\"inq\">4个臭皮匠顶个诸葛亮，盖·里奇果然不是盖的。</span>]\n",
+      "[<span class=\"inq\">爱是一切逻辑和原由。</span>]\n",
+      "[<span class=\"inq\">人生不能像做菜，把所有的料都准备好了才下锅。</span>]\n",
+      "[<span class=\"inq\">自由万岁。</span>]\n",
+      "[<span class=\"inq\">骗子大师和执著警探的你追我跑故事。 </span>]\n",
+      "[<span class=\"inq\">视觉革命。</span>]\n",
+      "[<span class=\"inq\">音乐能化解仇恨。</span>]\n",
+      "[<span class=\"inq\">一张面具背后的理想与革命。</span>]\n",
+      "[<span class=\"inq\">在时间之河里感受溺水之苦。</span>]\n",
+      "[<span class=\"inq\">你以为你以为的就是你以为的。</span>]\n",
+      "[<span class=\"inq\">你给我翻译翻译，神马叫做TMD的惊喜。</span>]\n",
+      "[<span class=\"inq\">美丽无罪。</span>]\n",
+      "[<span class=\"inq\">奔跑的孩子是天使。</span>]\n",
+      "[<span class=\"inq\">海豚的微笑，是世界上最高明的伪装。</span>]\n",
+      "[<span class=\"inq\">美利坚精神输出大片No1.</span>]\n",
+      "[<span class=\"inq\">暗恋的极致。</span>]\n",
+      "[<span class=\"inq\">尽管有些不切实际的幻想，这部电影依旧是一部感人肺腑的佳作。</span>]\n",
+      "[<span class=\"inq\">用音乐化解仇恨，让歌声串起美好。</span>]\n",
+      "[<span class=\"inq\">往事如烟，无处祭奠。</span>]\n",
+      "[<span class=\"inq\">去除成见，需要勇气。</span>]\n",
+      "[<span class=\"inq\">孪生蝙蝠侠大战克隆金刚狼。</span>]\n",
+      "[<span class=\"inq\">如果生活中有什么使你感到快乐，那就去做吧！不要管别人说什么。</span>]\n",
+      "[<span class=\"inq\">故事的高级讲法。</span>]\n",
+      "[<span class=\"inq\">警察抓小偷，老鼠玩死猫。</span>]\n",
+      "[<span class=\"inq\">安东尼·霍普金斯的顶级表演。</span>]\n",
+      "[<span class=\"inq\">人的命运被自己瞬间的抉择改变。</span>]\n",
+      "[<span class=\"inq\">爱情纠缠，男女一致。</span>]\n",
+      "[<span class=\"inq\">昔日翩翩少年，今日大腹便便。</span>]\n",
+      "[<span class=\"inq\">以戏谑来戏谑戏谑。</span>]\n",
+      "[<span class=\"inq\">人生中应该拥有这样的一段豁然开朗。</span>]\n",
+      "[<span class=\"inq\">小清新的故事里注入了大历史的情怀。</span>]\n",
+      "[<span class=\"inq\">绝对意义上的美轮美奂。</span>]\n",
+      "[<span class=\"inq\">浪漫忧郁的成人童话。</span>]\n",
+      "[<span class=\"inq\">史诗大片的典范。</span>]\n",
+      "[<span class=\"inq\">大时代中的人生，小人物的悲喜。</span>]\n",
+      "[<span class=\"inq\">法式小清新。 </span>]\n",
+      "[<span class=\"inq\">我是一个演员。</span>]\n",
+      "[<span class=\"inq\">约翰尼·德普的独角戏。</span>]\n",
+      "[<span class=\"inq\">最不可能的那个人永远是最可能的。</span>]\n",
+      "[<span class=\"inq\">每个人心中都有一座断背山。</span>]\n",
+      "[<span class=\"inq\">关于连环杀人悬案的集体回忆。</span>]\n",
+      "[<span class=\"inq\">人言可畏。</span>]\n",
+      "[<span class=\"inq\">人与自然的战争史诗。</span>]\n",
+      "[<span class=\"inq\">沉醉在电影的情感和视听氛围中无法自拔。</span>]\n",
+      "[<span class=\"inq\">10年的完美句点。</span>]\n",
+      "[<span class=\"inq\">一场华丽的意淫。</span>]\n",
+      "[<span class=\"inq\">死可能是一道门，逝去并不是终结，而是超越，走向下一程。</span>]\n",
+      "[<span class=\"inq\">寂寞没有期限。</span>]\n",
+      "[<span class=\"inq\">深入内心的恐怖，出人意料的结局。</span>]\n",
+      "[<span class=\"inq\">那些静得只能听见呼吸的日子里，你明白孤独即生活。</span>]\n",
+      "[<span class=\"inq\">《我是山姆》的《美丽人生》。</span>]\n",
+      "[<span class=\"inq\">年度最佳date movie。</span>]\n",
+      "[<span class=\"inq\">梦的勾结。</span>]\n",
+      "[<span class=\"inq\">缘分是个连绵词，最美不过一瞬。</span>]\n",
+      "[<span class=\"inq\">尊敬他人，尊敬你生活的这片土地，明白孤独是人生的常态。</span>]\n",
+      "[<span class=\"inq\">你是我最好的朋友，你是我唯一的朋友 。</span>]\n",
+      "[<span class=\"inq\">少女情怀总是诗。</span>]\n",
+      "[<span class=\"inq\">我们都曾经是一一。</span>]\n",
+      "[<span class=\"inq\">华太师是黄霑，吴镇宇四大才子之一。</span>]\n",
+      "[<span class=\"inq\">没有一人完全善，也没有一人完全恶。</span>]\n",
+      "[<span class=\"inq\">诺兰就是保证。</span>]\n",
+      "[<span class=\"inq\">抱着梦想而活着的人是幸福的，怀抱梦想而死去的人是不朽的。</span>]\n",
+      "[<span class=\"inq\">再多各自牛逼的时光，也比不上一起傻逼的岁月。 </span>]\n",
+      "[<span class=\"inq\">两张绝世的脸。 </span>]\n",
+      "[<span class=\"inq\">穷尽一生，我们要学会的，不过是彼此拥抱。</span>]\n",
+      "[<span class=\"inq\">百看不厌。 </span>]\n",
+      "[<span class=\"inq\">相逢只要一瞬间，等待却像是一辈子。</span>]\n",
+      "[<span class=\"inq\">和谐的生活离不开摸头与被摸头。</span>]\n",
+      "[<span class=\"inq\">触不到的恋人。</span>]\n",
+      "[<span class=\"inq\">Balalala~~~</span>]\n",
+      "[<span class=\"inq\">我的平常生活就是他人的幸福。</span>]\n",
+      "[<span class=\"inq\">有时候幸福需要等一等。 </span>]\n",
+      "[<span class=\"inq\">从没见过那么流氓的温柔，从没见过那么温柔的流氓。</span>]\n",
+      "[<span class=\"inq\">曾经的那段美好会沉淀为一辈子的记忆。</span>]\n",
+      "[<span class=\"inq\">恐怖分子的“秋菊打官司”。</span>]\n",
+      "[<span class=\"inq\">九年后的重逢是世俗和责任的交叠，没了悸动和青涩，沧桑而温暖。</span>]\n",
+      "[<span class=\"inq\">坏人的好总是比好人的好来得更感人。</span>]\n",
+      "[<span class=\"inq\">Mr. I Don't Care其实也有Care的时候。</span>]\n",
+      "[<span class=\"inq\">不要给它起名字，起了名字就有感情了。</span>]\n",
+      "[<span class=\"inq\">跨度十五年的欢乐与泪水。</span>]\n",
+      "[<span class=\"inq\">动画片的圣经。</span>]\n",
+      "[<span class=\"inq\">优秀的战争片不会美化战场，不会粉饰死亡，不会矮化敌人，不会无视常识，最重要的，不会宣扬战争。</span>]\n",
+      "[<span class=\"inq\">爱是摈弃傲慢与偏见之后的曙光。</span>]\n",
+      "[<span class=\"inq\">警恶惩奸，维护世界和平这个任务就交给你了，好吗？</span>]\n",
+      "[<span class=\"inq\">被上帝抛弃了的上帝之城。</span>]\n",
+      "[<span class=\"inq\">把每天当作最后一天般珍惜度过，积极拥抱生活，就是幸福。</span>]\n",
+      "[<span class=\"inq\">任何信念的力量，都无法改变命运。</span>]\n",
+      "[<span class=\"inq\">真相就在眼前。</span>]\n",
+      "[<span class=\"inq\">中国家庭的喜怒哀乐忍。</span>]\n",
+      "[<span class=\"inq\">土壤没有落叶不会肥沃，没有了你就不算人生。</span>]\n",
+      "[<span class=\"inq\">传奇的年代，醉人的童话。</span>]\n",
+      "[<span class=\"inq\">像吃了苏打饼一样干脆的电影。</span>]\n",
+      "[<span class=\"inq\">英雄泪短，兄弟情长。 </span>]\n",
+      "[<span class=\"inq\">热血沸腾，那个低俗、性感的无耻混蛋又来了。</span>]\n",
+      "[<span class=\"inq\">岁月流逝，来日可追。</span>]\n",
+      "[<span class=\"inq\">时代悲歌。</span>]\n",
+      "[<span class=\"inq\">想你时你在闹海。</span>]\n",
+      "[<span class=\"inq\">爱并不需要智商 。</span>]\n",
+      "[<span class=\"inq\">老少皆宜，这就是好莱坞动画的魅力。</span>]\n",
+      "[<span class=\"inq\">香港浪漫主义警匪动作片的巅峰之作。</span>]\n",
+      "[<span class=\"inq\">写给影迷，动漫迷和游戏迷的一封情书。</span>]\n",
+      "[<span class=\"inq\">怼天怼地，你走后，她与世界为敌。</span>]\n",
+      "[<span class=\"inq\">荒诞讽刺，千奇百巧，抽丝剥茧，百转千回。</span>]\n",
+      "[<span class=\"inq\">幸福是生生不息，却难以触及的远。 </span>]\n",
+      "[<span class=\"inq\">Jared Leto的腿比女人还美！</span>]\n",
+      "[<span class=\"inq\">揭露人性的丧尸题材力作。</span>]\n",
+      "[<span class=\"inq\">爱，是个动词。</span>]\n",
+      "[<span class=\"inq\">始于荒诞，止于更荒诞。</span>]\n",
+      "[<span class=\"inq\">电影诗。</span>]\n",
+      "[<span class=\"inq\">上帝之城+猜火车+阿甘正传+开心辞典=山寨富翁</span>]\n",
+      "[<span class=\"inq\">一个针管引发的血案。</span>]\n",
+      "[<span class=\"inq\">这个世界从不善待努力的人，努力了也不一定会成功，但是知道自己在努力，就是活下去的动力。</span>]\n",
+      "[<span class=\"inq\">穿越错位的时空，仰望陨落的星辰，你没留下你的名字，我却无法忘记那句“我爱你”。</span>]\n",
+      "[<span class=\"inq\">黑暗之美。</span>]\n",
+      "[<span class=\"inq\">偷情本没有这样美。</span>]\n",
+      "[<span class=\"inq\">当这个世界闭上双眼，他却敞开了怀抱。</span>]\n",
+      "[<span class=\"inq\">不一样的导演，不一样的哈利·波特。</span>]\n",
+      "[<span class=\"inq\">养狗三日，便会对你终其一生。</span>]\n",
+      "[<span class=\"inq\">不得不说，《黑客帝国》系列是商业片与科幻、哲学完美结合的典范。</span>]\n",
+      "[<span class=\"inq\">愿我们都不用长大，每一座城堡都能永远存在。</span>]\n",
+      "[<span class=\"inq\">他给机器起名“克里斯托弗”，因为这是他初恋的名字。</span>]\n",
+      "[<span class=\"inq\">惠及一生的美丽。</span>]\n",
+      "[<span class=\"inq\">生活在自己的世界里，也可以让周围的人显得可笑和渺小。</span>]\n",
+      "[<span class=\"inq\">感情不分食草或者食肉。</span>]\n",
+      "[<span class=\"inq\">好的剧本是，就算你猜到了结局也猜不到全部。</span>]\n",
+      "[<span class=\"inq\">迪士尼和皮克斯拿错剧本的产物。</span>]\n",
+      "[<span class=\"inq\">魔法的密室之门已打开...</span>]\n",
+      "[<span class=\"inq\">爱情没有那么多借口，如果不能圆满，只能说明爱的不够。 </span>]\n",
+      "[<span class=\"inq\">松鼠才是角儿。</span>]\n",
+      "[<span class=\"inq\">是枝裕和的家庭习作。</span>]\n",
+      "[<span class=\"inq\">要做就做得狠一点，这样才能活下去。</span>]\n",
+      "[<span class=\"inq\">我们都有权利不与自己的过去和解。</span>]\n",
+      "[<span class=\"inq\">有一些东西不应该被遗忘。</span>]\n",
+      "[<span class=\"inq\">永远看不腻的喜剧。</span>]\n",
+      "[<span class=\"inq\">被偷走的岁月，被伤害的生命，被禁锢的灵魂，终将被希望和善意救赎。</span>]\n",
+      "[<span class=\"inq\">不要企图在重复中寻找已经失去的爱。</span>]\n",
+      "[<span class=\"inq\">故事的反转与反转，分裂电影的始祖。</span>]\n",
+      "[<span class=\"inq\">世界不完美，爱会有奇迹。</span>]\n",
+      "[<span class=\"inq\">宫崎骏的电影总让人感觉世界是美好的，阳光明媚的。</span>]\n",
+      "[<span class=\"inq\">对爱的执着，可以超越一切。</span>]\n",
+      "[<span class=\"inq\">骨灰级歌舞片。</span>]\n",
+      "[<span class=\"inq\">中国版《两杆大烟枪》。</span>]\n",
+      "[<span class=\"inq\">人生的N种可能性。</span>]\n",
+      "[<span class=\"inq\">大海啊，不全是水。</span>]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<span class=\"inq\">所谓爱情，就是话唠一路，都不会心生腻烦，彼此嫌弃。</span>]\n",
+      "[<span class=\"inq\">少见的超越首部的续集，动作片中的经典。</span>]\n",
+      "[<span class=\"inq\">我们组成了家。</span>]\n",
+      "[<span class=\"inq\">中国式内在的美国电影。</span>]\n",
+      "[<span class=\"inq\">传奇，不是每个人都可以拥有。</span>]\n",
+      "[<span class=\"inq\">黑小鸭速效美白记。</span>]\n",
+      "[<span class=\"inq\">爱上未来的你。 </span>]\n",
+      "[<span class=\"inq\">坚硬的信仰。</span>]\n",
+      "[<span class=\"inq\">天使暂时离开。</span>]\n",
+      "[<span class=\"inq\">现代科幻电影的开山之作，最伟大导演的最伟大影片。</span>]\n",
+      "[<span class=\"inq\">弱者送给弱者的一刀。</span>]\n",
+      "[<span class=\"inq\">来啊，互相伤害啊！</span>]\n",
+      "[<span class=\"inq\">昆汀同学越来越变态了，比北野武还杜琪峰。</span>]\n",
+      "[<span class=\"inq\">永远的小人物，伟大的卓别林。</span>]\n",
+      "[<span class=\"inq\">王家卫是一种风格，张国荣是一个代表。</span>]\n",
+      "[<span class=\"inq\">嬉笑怒骂，调风动月。</span>]\n",
+      "[<span class=\"inq\">邓肯·琼斯继《月球》之后再度奉献出一部精彩绝伦的科幻佳作。</span>]\n",
+      "[<span class=\"inq\">一个单凭体香达到高潮的男人。</span>]\n",
+      "[<span class=\"inq\">谁说王家卫镜头很晃？</span>]\n",
+      "[<span class=\"inq\">人生如此，浮生如斯。谁人言，花彼岸，此生情长意短。谁都是不懂爱的罢了。</span>]\n",
+      "[<span class=\"inq\">哗啦啦啦啦，天在下雨，哗啦啦啦啦，云在哭泣……找自己。</span>]\n",
+      "[<span class=\"inq\">天使保护事件始末。</span>]\n",
+      "[<span class=\"inq\">做一颗让别人需要你的棋子。</span>]\n",
+      "[<span class=\"inq\">不可猜的青春迷笛。 </span>]\n",
+      "[<span class=\"inq\">每个美丽事物背后都是滴血的现实。</span>]\n",
+      "[<span class=\"inq\">假戏真情，爱欲深海</span>]\n",
+      "[<span class=\"inq\">用剩余不多的时间，去燃烧整个生命。</span>]\n",
+      "[<span class=\"inq\">人们可以登上月球，却永远无法探索人们内心的宇宙。</span>]\n",
+      "[<span class=\"inq\">日本的家庭电影已经是世界巅峰了，步履不停是巅峰中的佳作。</span>]\n",
+      "[<span class=\"inq\">当爱情跨越年龄的界限，它似乎能变得更久远一点，成为一种责任，一种水到渠成的相濡以沫。 </span>]\n",
+      "[<span class=\"inq\">“多么美好的一天！”轰轰轰砰咚，啪哒哒哒轰隆隆，磅~</span>]\n",
+      "[<span class=\"inq\">小成本大魅力。</span>]\n",
+      "[<span class=\"inq\">世界离独裁只有五天。</span>]\n",
+      "[<span class=\"inq\">宝莱坞的萝莉与大叔。</span>]\n",
+      "[<span class=\"inq\">爱我就给我看你的播放列表。</span>]\n",
+      "[<span class=\"inq\">新闻人的理性求真。</span>]\n",
+      "[<span class=\"inq\">过去的如果就让它过去了，未来只会越来越糟！</span>]\n",
+      "[<span class=\"inq\">东京那么大，如果有一天走失了，恐怕一辈子不能再相见。</span>]\n",
+      "[<span class=\"inq\">诺兰的牛逼来源于内心散发出的恐惧。</span>]\n",
+      "[<span class=\"inq\">只有有信仰的人才能说出事实真相。</span>]\n",
+      "[<span class=\"inq\">一部能引人思考的科幻励志片。</span>]\n",
+      "[<span class=\"inq\">你要相信，这世上真的有爱存在，不管在什么年纪 </span>]\n",
+      "[]\n",
+      "[<span class=\"inq\">还原真实而残酷的战争。</span>]\n",
+      "[<span class=\"inq\">来也匆匆去也匆匆，就这样风雨兼程。</span>]\n",
+      "[]\n",
+      "[<span class=\"inq\">我完全康复了。</span>]\n",
+      "[]\n",
+      "[<span class=\"inq\">生病的E.T.皮肤的颜色就像柿子饼。</span>]\n",
+      "[<span class=\"inq\">一个精彩的世界观正在缓缓建立。</span>]\n"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
